       the second message was overwriting the first. This has been fixed so that each one
       is distinct and will not overwrite eachother.
 -- cdr_tds:
    -- If the server you were using was going down, it had the potential to bring your asterisk
       server down with it. Extra stuff has been added so as to bring in more error/connection
       checking.
 -- internals
    -- Behavior was changed for 'show codec <number>' to make it more intuitive. (kshumard)
    -- DNS failures and asterisk do not get along too well, this is not totally the case anymore.
    -- Asterisk will now handle DNS failures at startup more gracefully, and won't crash and
       burn.
    -- Choosing to append to a wave file would render the outputted wave file corrupt. Appending
       now works again.
    -- If you failed to define certain keys, asterisk had the potential to crash when seeing if you had
       used them.
    -- Attempting to use such things as ${EXTEN:-1} gave a wrong return value. However, this was never
       a documented feature...

Asterisk 1.0.5

 -- chan_zap
    -- fix a callerid bug introduced in 1.0.4
 -- app_queue
    -- fix some penalty behavior

Asterisk 1.0.4

 -- general
    -- fix memory leak evident with extensive use of variables
    -- update IAXy firmware to version 22
       -- enable some special write protection
       -- enable outbound DTMF
    -- fix seg fault with incorrect usage of SetVar
    -- other minor fixes including typos and doc updates
 -- chan_sip
   -- fix codecs to not be case sensitive
   -- Re-use auth credentials
   -- fix MWI when using type=friend
   -- fix global NAT option
 -- chan_agent / chan_local
   -- fix incorrect use count
 -- chan_zap
   -- Allow CID rings to be configured in zapata.conf
      -- no more patching needed for UK CID
 -- app_macro 
    -- allow Macros to exit with '*' or '#' like regular extension processing
 -- app_voicemail
   -- don't allow '#' as a password